fixed some spelling issues

--- a/fail.html
+++ b/fail.html
@@ -30,8 +30,8 @@
 <body class="text-center">
     <main class="container">
         <div class="bg-light p-5 rounded">
-            <h1>OH Ho ! ... .. . </h1>
-            <p class="lead">There is a proble while you are signing up with your details you can try again</p>
+            <h1>OH Ho ! Something went wrong ... .. . </h1>
+            <p class="lead">There is a problem while you are signing up .. <br> you can try agin to sighn up</p>
             <form action="/fail" method="post">
                 <button type="submit" class="btn btn-lg btn-warning">Sign Me Up</button>
             </form>
